Buttons in upload container placed in a row.

--- a/src/styles.css
+++ b/src/styles.css
@@ -180,6 +180,12 @@ select.false-input {
             color: var(--dark-cold-gray);
         }
     }
+
+    .file-upload-buttons-container {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
 }
 
 .single-custom-file-upload-btn{
