--- a/src/app/profile/no-files-uploaded/no-files-uploaded.component.html
+++ b/src/app/profile/no-files-uploaded/no-files-uploaded.component.html
@@ -2,7 +2,7 @@
     <div class="no-files-uploaded">
         <div class="elements-container">
             <div class="no-files-image-container">
-                <img src="../../public/icons/unknownfile/128.png" alt="empty file gray icon">
+                <img src="icons/unknownfile/128.png" alt="empty file gray icon">
             </div>
             <label>No uploaded files.</label>
         </div>
