--- a/src/app/profile/profile-details/profile-details.component.html
+++ b/src/app/profile/profile-details/profile-details.component.html
@@ -9,7 +9,8 @@
                     <span>First Name</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Boris" disabled>
+                    <!-- <input type="text" value="{{userData()?.firstName}}" disabled> -->
+                    <input type="text" [value]="userProfileData()?.firstName">
                 </div>
                 <!-- <div class="error-container">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quisquam!</span>
@@ -20,7 +21,7 @@
                     <span>Last Name</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Emilov" disabled>
+                    <input type="text" value="{{userProfileData()?.lastName}}"  disabled>
                 </div>
                 <!-- <div class="error-container">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quisquam!</span>
@@ -31,17 +32,20 @@
                     <span>Date Of Birth</span>
                 </div>
                 <div class="content">
-                    <input type="date" value="2322-11-01"  class="false-input" disabled>
+                    <input type="date" value="{{userProfileData()?.dateOfBirth}}" disabled>
                 </div>
-                <div class="error-container">
+                <!-- <div class="error-container">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quisquam!</span>
-                </div>
+                </div> -->
             </div>
-            <div class="control-group">
-                <!-- <button class="green-btn">Edit</button> -->
-                <button class="green-btn">Save</button>
-                <button class="red-btn">Cancel</button>
-            </div>
+            <!-- <div class="control-group">
+                @if (!nameFormEditingActive()) {
+                    <button class="green-btn" type="button" (click)="editAndCancelNameForm('edit')">Edit</button>
+                } @else {
+                    <button class="green-btn">Save</button>
+                    <button class="red-btn" type="button" (click)="editAndCancelNameForm('cancel')">Cancel</button>
+                }
+            </div> -->
         </form>
     </div>
     <div class="grid-teil">
@@ -54,7 +58,7 @@
                     <span>Mobile Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="0184 5656 5664" disabled>
+                    <input type="text" value="{{userProfileData()?.mobileNumber}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -62,7 +66,7 @@
                     <span>Home Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="032 68 55 99" disabled>
+                    <input type="text" value="{{userProfileData()?.homeNumber}}" disabled>
                 </div>
                 <!-- <div class="error-container">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quisquam!</span>
@@ -73,14 +77,17 @@
                     <span>Email</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="some-email@gmail.com" disabled>
+                    <input type="text" value="{{userProfileData()?.email}}" disabled>
                 </div>
             </div>
-            <div class="control-group">
-                <button class="green-btn">Edit</button>
-                <!-- <button class="green-btn">Save</button>
-                <button class="red-btn">Cancel</button> -->
-            </div>
+            <!-- <div class="control-group">
+                @if (!contactFormEditingActive()) {
+                    <button class="green-btn" type="button" (click)="editAndCancelContactForm('edit')">Edit</button>
+                } @else {
+                    <button class="green-btn">Save</button>
+                    <button class="red-btn" type="button" (click)="editAndCancelContactForm('cancel')">Cancel</button>
+                }
+            </div> -->
         </form>
     </div>
     <div class="grid-teil">
@@ -93,7 +100,7 @@
                     <span>Street</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="SomeLongStr." disabled>
+                    <input type="text" value="{{userProfileData()?.street}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -101,7 +108,7 @@
                     <span>House Number</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="34a" disabled>
+                    <input type="text" value="{{userProfileData()?.houseNumber}}" disabled>
                 </div>
             </div>
             <div class="group">
@@ -109,17 +116,20 @@
                     <span>City</span>
                 </div>
                 <div class="content">
-                    <input type="text" value="Varna" disabled>
+                    <input type="text" value="{{userProfileData()?.city}}" disabled>
                 </div>
                 <!-- <div class="error-container">
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, quisquam!</span>
                 </div> -->
             </div>
-            <div class="control-group">
-                <button class="green-btn">Edit</button>
-                <!-- <button class="green-btn">Save</button>
-                <button class="red-btn">Cancel</button> -->
-            </div>
+            <!-- <div class="control-group">
+                @if (!addressFormEditingActive()) {
+                    <button class="green-btn" type="button" (click)="editAndCancelAddressForm('edit')">Edit</button>
+                } @else {
+                    <button class="green-btn">Save</button>
+                    <button class="red-btn" type="button" (click)="editAndCancelAddressForm('cancel')">Cancel</button>
+                }
+            </div> -->
 
         </form>
 
