--- a/src/app/profile/profile-grades/profile-grades.component.html
+++ b/src/app/profile/profile-grades/profile-grades.component.html
@@ -1,188 +1,56 @@
+@if (mustOpenAddGradeWindow()) {
+    <app-add-grade-window [subjectId]="subjectIdForGradeAddition()" (gradeToAdd)="receiverGradeToAdd($event)" (gradeAdditionCanceled)="receiverGradeAdditionCanceled($event)"></app-add-grade-window>
+}
 <div class="profile-grades">
-
-    <div class="grid-teil-subject-grades">
-        <div class="upper-container">
-            <div class="title">
-                <span>History</span>
-                <span class="extra-infos">Teacher: Michaela Ivanova</span>
-                <span class="extra-infos">SubjectID: 2332ht</span>
+    @if (gradingData()?.length) {
+        @for (grading of gradingData(); track $index) {
+            <!-- for each grading -->
+            <div class="grid-teil-subject-grades">
+                <div class="upper-container">
+                    <div class="title">
+                        <span>{{grading.subject.title}}</span>
+                        <span class="extra-infos">Teacher: {{grading.subject.teacher.firstName}} {{grading.subject.teacher.lastName}}</span>
+                        <span class="extra-infos">SubjectID: {{grading.subject.displayId}}</span>
+                    </div>
+                    <button class="green-btn" (click)="addGradeTrigger()">Add Grade</button>
+                </div>
+        
+                <form class="grades-container">
+                    @if (grading.grades.length) {
+                        @for (grade of grading.grades; track $index) {
+                            <!-- for each grade -->
+                            <div class="grade">
+                                <!-- <div class="grade-controls">
+                                    <button>Edit</button>
+                                    <button>Delete</button>
+                                    <button>OK</button>
+                                    <button>Cancel</button>
+                                </div> -->
+                                <div class="content">
+                                    <input class="correct-input" type="number" value="6" disabled>
+                                </div>
+                                <!-- <div class="error-container">
+                                    <span>Grade missing.</span>
+                                </div> -->
+                            </div>
+                        }
+                    } @else {
+                        <div class="no-results">
+                            <span>You have not received a grade for this subject yet.</span>
+                        </div>
+                    }
+        
+                </form>
+        
             </div>
-            <button class="green-btn">Add Grade</button>
+        }
+    } @else {
+        <div class="no-results">
+            <span>No gradings available yet. Join a subject!</span>
         </div>
+    }
 
-        <form class="grades-container">
-
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-            <div class="grade">
-                <!-- <div class="grade-controls">
-                    <button>Edit</button>
-                    <button>Delete</button>
-                    <button>OK</button>
-                    <button>Cancel</button>
-                </div> -->
-                <div class="content">
-                    <input class="correct-input" type="number" value="6" disabled>
-                </div>
-                <!-- <div class="error-container">
-                    <span>Grade missing.</span>
-                </div> -->
-            </div>
-
-        </form>
-
-    </div>
     
+
+
 </div>
