--- a/src/app/profile/profile-main/profile-main.component.css
+++ b/src/app/profile/profile-main/profile-main.component.css
@@ -1,3 +1,7 @@
+:host {
+    width: 100%;
+}
+
 .profile-view {
     display: flex;
     flex-direction: column;
@@ -44,12 +48,14 @@
 .profile-view .person-pic-container {
     position: relative;
     width: 150px;
-    height: 350px;
+    /* height: 150px; */
     z-index: 3;
     img {
         border: 4px solid var(--black);
         max-width: 100%;
         height: auto;
+        position: absolute;
+        top: -170px;
     }
 }
 
@@ -114,6 +120,9 @@
     }
     button:hover {
         color: var(--rusty-red);
+    }
+    button:active {
+        transform: translateY(0);
     }
     /* add this class to indicate the active field/button */
     button.colorize {
