--- a/src/app/profile/profile-grades/profile-grades.component.html
+++ b/src/app/profile/profile-grades/profile-grades.component.html
@@ -1,56 +1,64 @@
 @if (mustOpenAddGradeWindow()) {
-    <app-add-grade-window [subjectId]="subjectIdForGradeAddition()" (gradeToAdd)="receiverGradeToAdd($event)" (gradeAdditionCanceled)="receiverGradeAdditionCanceled($event)"></app-add-grade-window>
+<app-add-grade-window [gradingIdToAddGradeTo]="gradingId()" [userIdToAddGradeFor]="userIdForGradesData()"
+    (gradeAdded)="receiverGradeAdded($event)"
+    (gradeAdditionCanceled)="receiverGradeAdditionCanceled($event)"></app-add-grade-window>
+}
+@if (mustOpenGradeEditingWindow()) {
+<app-edit-grade-window [gradeIdToEdit]="gradeIdToEdit()" [userIdToEditGradeFor]="userIdForGradesData()"
+[gradeToEdit]="gradeToEdit()"
+    (gradeEdited)="receiverGradeEdited($event)"
+    (gradeEditingCanceled)="receiverGradeEditingCanceled($event)"></app-edit-grade-window>
 }
 <div class="profile-grades">
     @if (gradingData()?.length) {
-        @for (grading of gradingData(); track $index) {
-            <!-- for each grading -->
-            <div class="grid-teil-subject-grades">
-                <div class="upper-container">
-                    <div class="title">
-                        <span>{{grading.subject.title}}</span>
-                        <span class="extra-infos">Teacher: {{grading.subject.teacher.firstName}} {{grading.subject.teacher.lastName}}</span>
-                        <span class="extra-infos">SubjectID: {{grading.subject.displayId}}</span>
-                    </div>
-                    <button class="green-btn" (click)="addGradeTrigger()">Add Grade</button>
-                </div>
-        
-                <form class="grades-container">
-                    @if (grading.grades.length) {
-                        @for (grade of grading.grades; track $index) {
-                            <!-- for each grade -->
-                            <div class="grade">
-                                <!-- <div class="grade-controls">
-                                    <button>Edit</button>
-                                    <button>Delete</button>
-                                    <button>OK</button>
-                                    <button>Cancel</button>
-                                </div> -->
-                                <div class="content">
-                                    <input class="correct-input" type="number" value="6" disabled>
-                                </div>
-                                <!-- <div class="error-container">
-                                    <span>Grade missing.</span>
-                                </div> -->
-                            </div>
-                        }
-                    } @else {
-                        <div class="no-results">
-                            <span>You have not received a grade for this subject yet.</span>
-                        </div>
-                    }
-        
-                </form>
-        
+    @for (grading of gradingData(); track $index) {
+    <!-- for each grading -->
+    <div class="grid-teil-subject-grades">
+        <div class="upper-container">
+            <div class="title">
+                <span>{{grading.subject.title}}</span>
+                <span class="extra-infos">Teacher: {{grading.subject.teacher.firstName}}
+                    {{grading.subject.teacher.lastName}}</span>
+                <span class="extra-infos">SubjectID: {{grading.subject.displayId}}</span>
             </div>
-        }
-    } @else {
-        <div class="no-results">
-            <span>No gradings available yet. Join a subject!</span>
+            @if (viewerAuthStatus() === 'teacher') {
+            <button class="green-btn" type="button" (click)="addGradeTrigger(grading._id)">Add Grade</button>
+            }
         </div>
+
+        <form class="grades-container">
+            @if (grading.grades.length) {
+            @for (grade of grading.grades; track $index) {
+            <!-- for each grade -->
+            <div class="grade">
+                @if (viewerAuthStatus() === 'teacher') {
+                <div class="grade-controls">
+                    <button type="button" (click)="editGradeTrigger(grade._id, grade.value)">Edit</button>
+                    <button type="button" (click)="deleteGradeTrigger(grading._id, grade._id)">Delete</button>
+                </div>
+                }
+                <div class="content">
+                    <input class="correct-input" type="number" value="{{grade.value}}" disabled>
+                </div>
+            </div>
+            }
+            } @else {
+            <div class="no-results">
+                <span>You have not received a grade for this subject yet.</span>
+            </div>
+            }
+
+        </form>
+
+    </div>
+    }
+    } @else {
+    <div class="no-results">
+        <span>No gradings available yet. Join a subject!</span>
+    </div>
     }
 
-    
+
 
 
 </div>
