--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -19,13 +19,13 @@
             <div class="navigation nav-specific">
                 <nav>
                     <ul>
-                        <li><a href="javascript:void(0)">Add Student</a></li>
+                        <li><a routerLink="/add-student">Add Student</a></li>
                         <li>
                             <div class="dropdown">
                                 <a href="javascript:void(0)" class="dropdown-btn underline">My Students</a>
                                 <div class="dropdown-content">
                                     @for (child of parentChildren(); track $index) {
-                                        <a href="javascript:void(0)" routerLink="profile/{{child._id}}/details">{{child.firstName}} {{child.lastName}}</a>
+                                        <a routerLink="/profile/{{child._id}}/details">{{child.firstName}} {{child.lastName}}</a>
                                     }
                                 </div>
                             </div>
