Route for all students added.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -54,7 +54,7 @@
                                 <a href="#" class="dropdown-btn underline">Students</a>
                                 <div class="dropdown-content">
                                     <a href="javascript:void(0)" routerLink="/pending-applications">Pending Applications</a>
-                                    <a href="#">All Students</a>
+                                    <a routerLink="/all-students">All Students</a>
                                 </div>
                             </div>
                         </li>
