--- a/src/app/profile/all-students/all-students.component.css
+++ b/src/app/profile/all-students/all-students.component.css
@@ -2,14 +2,14 @@
     width: 100%;
 }
 
-.pending-applications-view {
+.all-students-view {
     display: flex;
     width: 100%;
     height: fit-content;
     flex-direction: column;
 }
 
-.pending-applications-view .location {
+.all-students-view .location {
     border-bottom: 1px solid var(--black);
 
     span {
@@ -18,7 +18,7 @@
     }
 }
 
-.pending-applications-view .applications-container {
+.all-students-view .students-container {
     padding-top: 30px;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@
     gap: 30px;
 }
 
-.pending-applications-view .search-container {
+.all-students-view .search-container {
     /* border: 2px solid red; */
     min-width: 400px;
     padding-top: 30px;
@@ -58,18 +58,18 @@
 }
 
 /* add this class dinamicali to bottom-lower*/
-.pending-applications-view .segment-controls div.bottom-lower.hide {
+.all-students-view .segment-controls div.bottom-lower.hide {
     display: none;
 }
 
 
-.pending-applications-view .all-applications-container {
+.all-students-view .all-students-container {
     width: 100%;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    .single-application {
+    .single-student {
         padding: 20px 0;
         height: auto;
         background-color: var(--white);
@@ -78,10 +78,10 @@
         justify-content: space-around;
         align-items: center;
     }
-    .single-application:hover {
+    .single-student:hover {
         box-shadow: var(--component-box-shadow);
     }
-    .single-application .student-photo {
+    .single-student .student-photo {
         /* border: 2px solid red; */
         display: flex;
         width: 150px;
@@ -94,11 +94,11 @@
             border: 4px solid var(--black);
         }
     }
-    .single-application .application-name {
+    .single-student .student-name {
         font-size: var(--size-option);
         font-weight: bold;
     }
-    .single-application .application-id {
+    .single-student .student-id {
         font-size: var(--size-description);
         font-weight: bold;
         color: var(--gray);
