--- a/src/styles.css
+++ b/src/styles.css
@@ -234,3 +234,12 @@ select.false-input {
 span.error {
     color: var(--rusty-red);
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
