--- a/src/app/core/main/main.component.css
+++ b/src/app/core/main/main.component.css
@@ -5,7 +5,7 @@
 
 main {
     background-color: var(--background-gray);
-    padding: 1vh 1vw;
+    /* padding: 1vh 1vw; */
     flex: 1 1 auto;
     overflow-y: auto;
     display: flex;
