Home component styling and view added.

--- a/src/app/basic/home/home.component.html
+++ b/src/app/basic/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<div class="home-view">
+    <div class="content">
+        <div class="teil text wellcome unselectable">
+            <span>Wellcome Home in</span>
+        </div>
+        <div class="teil text school-name unselectable">
+            <span>St. Peter Middle School</span>
+        </div>
+        <div class="teil text years unselectable">
+            <span>120 years quality education.</span>
+        </div>
+        <div class="teil"></div>
+        <div class="teil controls">
+                <button class="apply-btn btn">Apply Now!</button>
+                <button class="other-btn btn">Subjects</button>
+        </div>
+        <div class="teil"></div>
+    </div>
+</div>
