Logo is now not selectable.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header-container">
-    <div class="logo">
+    <div class="logo unselectable">
         <p>St. Peter Middle School</p>
     </div>
 
