Unselectable class added to buttons.

--- a/src/app/basic/home/home.component.html
+++ b/src/app/basic/home/home.component.html
@@ -11,8 +11,8 @@
         </div>
         <div class="teil"></div>
         <div class="teil controls">
-                <button class="apply-btn btn">Apply Now!</button>
-                <button class="other-btn btn">Subjects</button>
+                <button class="apply-btn btn unselectable">Apply Now!</button>
+                <button class="other-btn btn unselectable">Subjects</button>
         </div>
         <div class="teil"></div>
     </div>
