--- a/src/app/basic/home/home.component.css
+++ b/src/app/basic/home/home.component.css
@@ -97,5 +97,5 @@
 
 .other-btn {
     color: var(--white);
-    background-color: rgba(213, 41, 65, 0.5);;
+    background-color: rgba(213, 41, 65, 0.5);
 }
