--- a/src/app/basic/home/home.component.css
+++ b/src/app/basic/home/home.component.css
@@ -99,3 +99,7 @@
     color: var(--white);
     background-color: rgba(213, 41, 65, 0.5);
 }
+.other-btn:hover {
+    color: var(--white);
+    background-color: rgba(213, 41, 65, 0.8);
+}
